# Focus

./: .gitmodules  README.md
algorithm/: env.md  run_focus.sh  run_focus_image.sh
algorithm/focus/: interface.py  main.py  pyproject.toml
algorithm/focus/models/qwen2/: modeling_qwen2.py  modeling_qwen2_CMC.py  modeling_qwen2_adaptiv.py
algorithm/focus/models/qwen2_5_vl/: modeling_qwen2_5_vl.py  modeling_qwen2_5_vl_adaptiv.py
algorithm/lmms-eval/lmms_eval/framefusion/models/qwen2/: modeling_qwen2.py  modeling_qwen2_baseline.py
algorithm/lmms-eval/lmms_eval/models/: minicpm_v.py
